--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -2,16 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="UTF-8" />
-        <link th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.css}" rel="stylesheet" />
-        <script type="text/javascript" th:src="@{/webjars/bootstrap/4.0.0/js/bootstrap.min.js}"></script>
-        <link rel="stylesheet" th:href="@{/DataTables-1.10.16/css/dataTables.bootstrap4.min.css}"/>
-        <script type="text/javascript" th:src="@{/DataTables-1.10.16/js/dataTables.bootstrap4.min.js}"></script>
+		<link href="./css/bootstrap.min.css" rel="stylesheet" />
+		<script type="text/javascript" src="./js/bootstrap.min.js" ></script>
     </head>
     <body>
 	<div class="container">
 	  <div class="row">
 	  	<div class="col">
-	      <a class="btn btn-primary" th:href="@{/detail?kbn=1}" role="button">新規</a>
+	      <a class="btn btn-primary" th:href="@{detail?kbn=1}" role="button">新規</a>
 	  	</div>
 	  </div>
 	  <table class="table">
@@ -27,9 +25,9 @@
 		    <tr th:each="p, status: ${productList}">
 		      <th scope="row">[[${status.index + 1}]]</th>
 		      <td>
-     		    <a class="btn btn-dark" th:href="@{/detail/{pathValue}?kbn=2(pathValue=${p.id})}" role="button">詳細</a>
-     		    <a class="btn btn-dark" th:href="@{/detail/{pathValue}?kbn=3(pathValue=${p.id})}" role="button">編集</a>
-     		    <a class="btn btn-dark" th:href="@{/detail/{pathValue}?kbn=4(pathValue=${p.id})}" role="button">削除</a>
+     		    <a class="btn btn-dark" th:href="@{detail/{pathValue}?kbn=2(pathValue=${p.id})}" role="button">詳細</a>
+     		    <a class="btn btn-dark" th:href="@{detail/{pathValue}?kbn=3(pathValue=${p.id})}" role="button">編集</a>
+     		    <a class="btn btn-dark" th:href="@{detail/{pathValue}?kbn=4(pathValue=${p.id})}" role="button">削除</a>
 		      </td>
 		      <td>[[${p.name}]]</td>
 		      <td>[[${p.price}]]</td>
